--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,12 +18,16 @@
 
     <div class="container">
 
-      <form class="form-signin">
-        <h2 class="form-signin-heading">Sign in</h2>
+      <form class="form-signin" action="#" th:action="@{/loginCheck}" th:object="${userCredential}" method="post">
+        <h2 class="form-signin-heading" >Sign in</h2>
         <label for="inputEmail" class="sr-only">Username</label>
-        <input type="text" id="inputUsername" class="form-control" placeholder="Username"/>
+        <input type="text" id="inputUsername" class="form-control" placeholder="Username"
+               th:field="*{username}"/>
         <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password"/>
+        <input type="password" id="inputPassword" class="form-control" placeholder="Password"
+                th:field="*{password}"/>
+        <div th:if="${error != null}" class="alert alert-danger" role="alert">Invalid username or password</div>  
+         <div th:if="${logout != null}" class="alert alert-info" role="alert">Logout Success</div>       
         <button class="btn btn-lg btn-primary btn-block" type="submit">
         	<span class="glyphicon glyphicon-log-in" aria-hidden="true"></span> Sign in
         </button>
