--- a/src/main/resources/templates/contactform.html
+++ b/src/main/resources/templates/contactform.html
@@ -20,13 +20,15 @@
 			<h1>Contact Form</h1>
 			<br/>
 			<form action="#" th:action="@{/contacts/addContact}" th:object="${contactModel}" method="post">
-				First Name: <input type="text" class="form-control" th:field="*{firstName}"></input>
+			   <input type="hidden" th:field="*{id}"></input>
+			   
+				First Name: <input type="text" class="form-control" th:field="*{firstName}" th:value="*{firstName}"></input>
 				<br/>
-				Last Name: <input type="text" class="form-control" th:field="*{lastName}"></input>
+				Last Name: <input type="text" class="form-control" th:field="*{lastName}" th:value="*{lastName}"></input>
 				<br/>
-				Telephone: <input type="text" class="form-control" th:field="*{telephone}"></input>
+				Telephone: <input type="text" class="form-control" th:field="*{telephone}" th:value="*{telephone}"></input>
 				<br/>
-				City: <input type="text" class="form-control" th:field="*{city}"></input>
+				City: <input type="text" class="form-control" th:field="*{city}" th:value="*{city}"></input>
 				<br/>
 				<br/>
 				<button class="btn btn-lg btn-primary btn-block" type="submit">
