--- a/src/main/resources/templates/contacts.html
+++ b/src/main/resources/templates/contacts.html
@@ -35,39 +35,21 @@
 					</tr>
 				</thead>
 				<tbody>
-					<tr>
-						<td>Mark</td>
-						<td>Otto</td>
-						<td>656765678</td>
-						<td>Berlin</td>
+					<tr th:each="contact : ${listContacts}" >
+						<td th:text="${contact.firstName}"></td>
+						<td th:text="${contact.lastName}"></td>
+						<td th:text="${contact.telephone}"></td>
+						<td th:text=${contact.city}></td>
 						<td>
-							<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></button>
-						
-							<button type="button" class="btn btn-danger"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></button>
+							<a href="#" th:href="@{/contacts/contactform?id=__${contact.id}__}">
+							  <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></button>
+						    </a>
+							<a href="#" th:href="@{/contacts/removeContact?id=__${contact.id}__}">
+							  <button type="button" class="btn btn-danger"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></button>
+							</a>
 						</td>
 					</tr>
-					<tr>
-						<td>Jacob</td>
-						<td>Thornton</td>
-						<td>234324567</td>
-						<td>Madrid</td>
-						<td>
-							<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></button>
-						
-							<button type="button" class="btn btn-danger"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></button>
-						</td>
-					</tr>
-					<tr>
-						<td>Larry</td>
-						<td>the Bird</td>
-						<td>324565678</td>
-						<td>Amsterdam</td>
-						<td>
-							<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></button>
-						
-							<button type="button" class="btn btn-danger"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></button>
-						</td>
-					</tr>
+				
 				</tbody>
 			</table>
 		</div>
@@ -80,7 +62,7 @@
 		   Add Contact Failed!
 		</div>
 		
-		<a href="#" th:href="@{/contacts/contactform}">
+		<a href="#" th:href="@{/contacts/contactform?id=0}">
 		<button class="btn btn-lg btn-primary btn-block" type="submit"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Add contact</button>
 		</a>
 		
