--- a/src/main/resources/templates/contacts.html
+++ b/src/main/resources/templates/contacts.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" >
   <head>
     <meta charset="utf-8"/>
 
@@ -19,7 +19,7 @@
 	
 	<div class="container">
 	
-		<h1>Hello, user!</h1>
+            <h1>Hello, <span th:text="${username}"></span></h1>
 		<br/>
 		<div class="panel panel-default">
 			<div class="panel-heading"></div>
@@ -66,9 +66,9 @@
 		<button class="btn btn-lg btn-primary btn-block" type="submit"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Add contact</button>
 		</a>
 		
-		<a href="#" th:href="@{/login?logout}">
+                <form  th:action="@{/logout}" method="POST">
 		<button class="btn btn-lg btn-primary btn-block" type="submit"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> Logout</button>
-	    </a>
+	        </form>
 	</div>
 
 
