--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8"/>
 
@@ -18,14 +18,16 @@
 
     <div class="container">
 
-      <form class="form-signin" action="#" th:action="@{/loginCheck}" th:object="${userCredential}" method="post">
+      <form class="form-signin"  th:action="@{/logincheck}"  method="POST">
+          <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
         <h2 class="form-signin-heading" >Sign in</h2>
         <label for="inputEmail" class="sr-only">Username</label>
-        <input type="text" id="inputUsername" class="form-control" placeholder="Username"
-               th:field="*{username}"/>
+        <input type="text"  class="form-control" placeholder="Username"
+               name="username" id="username"/>
+        
         <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password"
-                th:field="*{password}"/>
+        <input type="password" class="form-control" placeholder="Password"
+               name="password" id="password"/>
         <div th:if="${error != null}" class="alert alert-danger" role="alert">Invalid username or password</div>  
          <div th:if="${logout != null}" class="alert alert-info" role="alert">Logout Success</div>       
         <button class="btn btn-lg btn-primary btn-block" type="submit">
