--- a/src/main/resources/templates/contacts.html
+++ b/src/main/resources/templates/contacts.html
@@ -69,6 +69,10 @@
                 <form  th:action="@{/logout}" method="POST">
 		<button class="btn btn-lg btn-primary btn-block" type="submit"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> Logout</button>
 	        </form>
+	        
+	        <a href="#" th:href="@{/rest/checkRest}">
+	          Rest Request!
+	        </a>
 	</div>
 
 
